Fix height section container on mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -312,9 +312,9 @@ p {
     height: 50px;
   }
 
-  /* .container {
-    height: 90%;
-  } */
+  .container {
+    height: 100%;
+  }
 
   .section-heading {
     font-size: 1.5rem;
